[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interfaces/GUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/Bar/lifebar_fill.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Bar/energy_bar_fill.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/Bar/energy_bar_bg.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Bar/lifebar_bg.png" type="Texture" id=5]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HpBar" type="TextureProgress" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 22.6818
margin_top = -44.2499
margin_right = 212.682
margin_bottom = -23.2499
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HpBar"]

[node name="ExperienceBar" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.6047
margin_top = -61.844
margin_right = 222.605
margin_bottom = -44.844
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ExperienceBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ExperienceBar/HBoxContainer"]
margin_right = 35.0
margin_bottom = 17.0
rect_min_size = Vector2( 35, 15 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="ExperienceBar/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="ExperienceBar/HBoxContainer"]
margin_left = 39.0
margin_right = 189.0
margin_bottom = 17.0
rect_min_size = Vector2( 150, 15 )
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentAmmo" type="Label" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 16.0
margin_bottom = 27.0
text = "30"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 24.0
margin_bottom = 40.0
mouse_filter = 2

[node name="MaxAmmo" type="Label" parent="HBoxContainer"]
margin_left = 28.0
margin_top = 13.0
margin_right = 44.0
margin_bottom = 27.0
text = "30"

[node name="GameMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GameMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameMenu/VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="MarginContainer" type="MarginContainer" parent="GameMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 18.0
